--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
   <!-- <script src="%PUBLIC_URL%/dist/js/pages/dashboard.js"></script> -->
 
-  <title>TigerSheet ChatBot</title>
+  <title>Rikpal</title>
 </head>
 
 <body>
