added apex charts

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,8 @@
   <!-- <script src="%PUBLIC_URL%/dist/js/pages/dashboard.js"></script> -->
 
   <title>Rikpal</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
 </head>
 
 <body>
